--- a/indexer/Makefile
+++ b/indexer/Makefile
@@ -9,7 +9,7 @@ CC = gcc
 MAKE = make
 
 # uncomment the following to turn on verbose memory logging
-# TESTING=-DMEMTEST
+ TESTING=-DMEMTEST
 
 CFLAGS = -Wall -pedantic -std=c11 -ggdb $(TESTING) -I$C -I$L
 OBJS = indexer.o indexertest.o
