--- a/common/Makefile
+++ b/common/Makefile
@@ -15,8 +15,8 @@ $(LIB): $(OBJS)
 	ar cr $(LIB) $(OBJS)
 
 # Dependencies: object files depend on header files
-pagedir.o: pagedir.h
-index.o: index.h $L/hashtable.h $L/counters.h $L/mem.h
+pagedir.o: pagedir.h $L/webpage.h $L/mem.h $L/file.h 
+index.o: index.h $L/hashtable.h $L/counters.h $L/mem.h $L/file.h 
 word.o: word.h $L/mem.h
 
 # clean up after our compilation
